<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
      >
    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.example.mannas.bakingapp.RecipeActivity"
        tools:ignore="MergeRootFrame">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:toolbarId="@+id/toolbar">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
                <ImageView
                    android:id="@+id/img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/recipe_detail_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" >
                <LinearLayout
                    android:descendantFocusability="blocksDescendants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:text="@string/ingredients"
                        android:textSize="20sp"
                        android:textColor="#ffffff"
                        android:background="#4B000000"
                        android:gravity="center"
                        />
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/ingredients_recycler"
                        android:name="com.example.mannas.bakingapp.RecipeActivity"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        app:layoutManager="LinearLayoutManager"
                        tools:context="com.example.mannas.bakingapp.RecipeActivity"
                        tools:listitem="@layout/ingredients_list_item"
                        />
                    <TextView
                        android:id="@+id/steps_title"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:text="@string/steps"
                        android:textSize="20sp"
                        android:textColor="#ffffff"
                        android:background="#4B000000"
                        android:gravity="center"
                        />
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="250dp">
                        <android.support.v4.view.ViewPager
                            android:id="@+id/steps_view_pager"
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            />
                        <LinearLayout
                            android:visibility="gone"
                            android:orientation="vertical"
                            android:id="@+id/swap_instruction"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#a9000000"
                            android:gravity="center"
                            >
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/scroll"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/swap_right_left"
                                android:textSize="20sp"
                                />
                        </LinearLayout>

                    </RelativeLayout>

                    <!--<android.support.v7.widget.RecyclerView-->
                    <!--android:id="@+id/steps_recycler"-->
                    <!--android:name="com.example.mannas.bakingapp.RecipeActivity"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--app:layoutManager="LinearLayoutManager"-->
                    <!--tools:context="com.example.mannas.bakingapp.RecipeActivity"-->
                    <!--tools:listitem="@layout/ingredients_list_item" />-->
                </LinearLayout>



        </android.support.v4.widget.NestedScrollView>



    </android.support.design.widget.CoordinatorLayout>


</LinearLayout>
