<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:minWidth="300dp"
    android:minHeight="500dp"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="center"
            android:text="@string/_250"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:background="#000000"
            />
        <TextView
            android:id="@+id/measure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g"

            android:gravity="center"
            android:textSize="25sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            />
        <TextView
            android:id="@+id/ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bittersweet_chocolate_60_70_cacao"
            android:textSize="20sp"
            android:layout_margin="5dp"
            />
    </LinearLayout>

</LinearLayout>