<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/pager_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#3b000000"
    android:minHeight="250dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/step_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textColor="#000000"
            android:textSize="25sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash"
            android:textColor="#000000"
            android:textSize="25sp"
            />
        <TextView
            android:id="@+id/steps_total_cnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:textColor="#000000"
            android:textSize="25sp"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/short_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/starting_prep"
        android:textColor="#000000"
        android:gravity="center"
        android:textSize="18sp"
        />
    <ImageView
        android:contentDescription="@string/play"
        android:id="@+id/play"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/play"
        />

</LinearLayout>